--- a/config/config.json
+++ b/config/config.json
@@ -2,21 +2,21 @@
   "development": {
     "username": "root",
     "password": "rolltribe1",
-    "database": "burger-sequelize",
+    "database": "burgers",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": "rolltribe1",
-    "database": "burger-sequelize",
+    "database": "burgers",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
     "production": {
     "username": "root",
     "password": "rolltribe1",
-    "database": "burger-sequelize",
+    "database": "burgers",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
