--- a/config/config.json
+++ b/config/config.json
@@ -7,17 +7,17 @@
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": "rolltribe1",
-    "database": "burgers",
-    "host": "127.0.0.1",
+    "username": "le1vavkrdrxis93t",
+    "password": "wzqqacgmqf3vrf7e",
+    "database": "qm1n8d2j3ijeh65e",
+    "host": "k3xio06abqa902qt.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   },
     "production": {
-    "username": "root",
-    "password": "rolltribe1",
-    "database": "burgers",
-    "host": "127.0.0.1",
+    "username": "le1vavkrdrxis93t",
+    "password": "wzqqacgmqf3vrf7e",
+    "database": "qm1n8d2j3ijeh65e",
+    "host": "k3xio06abqa902qt.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   }
 }
